Don't pass -1 as an action index for Windows native notifications

A negative index is used to indicate the default, unset state of the
action button index in the NotificationLaunchId, but this is not the
right value to pass along to NotificationHandlers.

Bug: 875091
Change-Id: I0d327eb1f3887904a674a6748cc6e9d60ec783c3
Reviewed-on: https://chromium-review.googlesource.com/1180973
Commit-Queue: Peter Beverloo <peter@chromium.org>
Reviewed-by: Finnur Thorarinsson <finnur@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584430}
Former-commit-id: 8663895cdd19b9ce09aab12f30d4af189a1944d4